--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 *{
     background-color: black;
     color: aliceblue;
+    font-family: 'inter';
 }
 
 #logo{
-    margin-top: 75px;
+    margin-top: 50px;
     margin-left: 50px;
+}
+
+#superior-title{
+    margin-left: 150px;
+    margin-top: 50px;
+}
+
+#superior-text{
+    margin-left: 150px;
+    margin-top: 35px;
 }
