--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    background-color: black;
+    background-image: url(./images/fundo-menusuperior.svg);
     color: aliceblue;
     font-family: 'inter';
 }
@@ -18,3 +18,4 @@
     margin-left: 150px;
     margin-top: 35px;
 }
+
