--- a/style.css
+++ b/style.css
@@ -4,18 +4,15 @@
 }
 
 #logo{
-    margin-top: 50px;
-    margin-left: 50px;
+    margin: 60px 0px 0px 50px;
 }
 
 #superior-title{
-    margin-left: 150px;
-    margin-top: 50px;
+    margin: 50px 0px 0px 150px
 }
 
 #superior-text{
-    margin-left: 150px;
-    margin-top: 35px;
+    margin: 35px 0px 100px 150px;
 }
 
 #menu-superior{
@@ -24,5 +21,19 @@
 }
 
 #menu-informacional{
-    
+    background-color: #EAECE5;
+    padding: 100px;
+    display: grid;
+    grid-auto-flow: column;
+    columns: auto;
+}
+
+.icone{
+margin: 50px 0px 50px 100px;
+padding: 25px;
+}
+
+.textoinformacional{
+    display: flex;
+    align-items: center;
 }
