--- a/style.css
+++ b/style.css
@@ -1,39 +1,47 @@
+/* Define o estilo global da página */
 *{
-    margin: 0px;
-    font-family: 'inter';
+    margin: 0px; 
+    font-family: 'Inter'; /* Define a fonte padrão */
 }
 
+/* Estiliza o logo */
 #logo{
-    margin: 60px 0px 0px 50px;
+    margin: 60px 0px 0px 50px; 
 }
 
+/* Estiliza o título na parte superior */
 #superior-title{
-    margin: 50px 0px 0px 150px
+    margin: 50px 0px 0px 150px; 
 }
 
+/* Estiliza o texto da parte superior */
 #superior-text{
-    margin: 35px 0px 100px 150px;
+    margin: 35px 0px 100px 150px; 
 }
 
+/* Estiliza o menu superior */
 #menu-superior{
-    background-image: url(./images/fundo-menusuperior.svg);
-    color: aliceblue;
+    background-image: url(./images/fundo-menusuperior.svg); /* Define imagem de fundo */
+    color: aliceblue; /* Define a cor do texto */
 }
 
+/* Estiliza o menu informacional */
 #menu-informacional{
-    background-color: #EAECE5;
-    padding: 100px;
-    display: grid;
-    grid-auto-flow: column;
-    columns: auto;
+    background-color: #EAECE5; /* Cor de fundo */
+    padding: 100px; /* Espaçamento interno */
+    display: grid; /* Usa o modelo de grid */
+    grid-auto-flow: column; /* Organiza os elementos em colunas */
+    columns: auto; /* Ajusta as colunas */
 }
 
+/* Estiliza os ícones */
 .icone{
-margin: 50px 0px 50px 100px;
-padding: 25px;
+    margin: 50px 0px 50px 100px; 
+    padding: 25px;
 }
 
+/* Estiliza os textos informacionais */
 .textoinformacional{
-    display: flex;
-    align-items: center;
+    display: flex; /* Usa flexbox para alinhamento */
+    align-items: center; /* Centraliza verticalmente */
 }
