Estrutura div carrosel, basica feita

--- a/style.css
+++ b/style.css
@@ -69,3 +69,24 @@
 #video {
     margin: 50px 25px 50px 100px;
 }
+
+#carrosel{
+    background-color: #247BA0;
+    padding: 50px;
+}
+
+
+#titulo-carrosel{
+    color: white;
+    text-align: center;
+    font-size: 25px;
+}
+
+#cards-carrosel{
+    display: grid;
+    grid-auto-flow: column;
+}
+
+.card{
+    margin-left: 50px;
+}
